--- a/packages/app/tsconfig.json
+++ b/packages/app/tsconfig.json
@@ -1,6 +1,31 @@
 {
-  "extends": "../../tsconfig.json",
+  "$schema": "http://json.schemastore.org/tsconfig",
   "compilerOptions": {
+    "target": "ES2021",
+    // "module": "commonjs",
+    "moduleResolution": "node",
+    // "lib": ["ESNext"],
+    "jsx": "react-jsx",
+    "jsxImportSource": "react",
+    "newLine": "lf",
+    "strict": true,
+    "declaration": true,
+    "declarationMap": true,
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+    "noImplicitAny": true,
+    "strictNullChecks": true,
+    "noImplicitThis": true,
+    "alwaysStrict": true,
+    "noUnusedLocals": true,
+    "noImplicitReturns": true,
+    "noFallthroughCasesInSwitch": false,
+    "experimentalDecorators": true,
+    "strictPropertyInitialization": true,
+    "allowJs": true,
+    "resolveJsonModule": true,
+    "noEmit": true,
     "module": "esnext",
     "lib": ["esnext", "dom", "dom.iterable"],
     "types": ["vite/client"],
@@ -9,5 +34,6 @@
       "@medplum/react": ["../react/src"]
     }
   },
+  "exclude": ["node_modules", "**/dist/*"],
   "include": ["src/**/*.ts", "src/**/*.tsx", "jest.setup.ts", "vite.config.ts"]
 }
