--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -43,15 +43,21 @@
     "@tabler/icons-react": "3.17.0",
     "@testing-library/jest-dom": "6.6.3",
     "@testing-library/react": "16.3.0",
+    "@testing-library/user-event": "^14.5.2",
+    "@types/jest": "^29.5.14",
+    "@types/node": "^20.18.1",
     "@types/react": "19.1.2",
     "@types/react-dom": "19.1.3",
     "@vitejs/plugin-react": "4.4.1",
+    "jest": "^29.7.0",
     "postcss": "8.5.3",
     "postcss-preset-mantine": "1.17.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-router": "7.5.3",
     "rfc6902": "5.1.2",
+    "rimraf": "^6.0.1",
+    "typescript": "^5.6.3",
     "vite": "6.3.5"
   },
   "engines": {
