--- a/packages/server/medplum.config.json
+++ b/packages/server/medplum.config.json
@@ -29,8 +29,8 @@
     "password": "medplum"
   },
   "redis": {
-    "host": "redis",
-    "port": 6379,
+    "host": "redis-emr",
+    "port": 6380,
     "password": "medplum"
   },
   "bullmq": {
