--- a/packages/app/tsconfig.json
+++ b/packages/app/tsconfig.json
@@ -28,11 +28,7 @@
     "noEmit": true,
     "module": "esnext",
     "lib": ["esnext", "dom", "dom.iterable"],
-    "types": ["vite/client"],
-    "paths": {
-      "@medplum/core": ["../core/src"],
-      "@medplum/react": ["../react/src"]
-    }
+    "types": ["vite/client"]
   },
   "exclude": ["node_modules", "**/dist/*"],
   "include": ["src/**/*.ts", "src/**/*.tsx", "jest.setup.ts", "vite.config.ts"]
