--- a/packages/app/Dockerfile
+++ b/packages/app/Dockerfile
@@ -9,7 +9,7 @@ RUN npm install
 
 COPY . .
 
-ENV MEDPLUM_BASE_URL="http://localhost:8103/"
+ENV MEDPLUM_BASE_URL="https://emr.afyahewani.io/"
 ENV MEDPLUM_CLIENT_ID=""
 ENV GOOGLE_CLIENT_ID=""
 ENV RECAPTCHA_SITE_KEY="6LfRVDUrAAAAAC2rjCTKs63lSBk4vQ4fT4s9hU4P"
