--- a/packages/app/.env.defaults
+++ b/packages/app/.env.defaults
@@ -1,5 +1,4 @@
-MEDPLUM_BASE_URL=http://localhost:8103/
+MEDPLUM_BASE_URL=http://localhost:8103
 MEDPLUM_CLIENT_ID=
+RECAPTCHA_SITE_KEY=
 GOOGLE_CLIENT_ID=
-RECAPTCHA_SITE_KEY=6LfHdsYdAAAAAC0uLnnRrDrhcXnziiUwKd8VtLNq
-MEDPLUM_REGISTER_ENABLED=true
