--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -25,7 +25,13 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "source-map-explorer": "source-map-explorer dist/**/*.js --gzip",
-    "test": "jest"
+    "test": "jest",
+    "pm2:dev": "pm2 start ecosystem.config.cjs --env development",
+    "pm2:prod": "pm2 start ecosystem.config.cjs --env production",
+    "pm2:stop": "pm2 stop all",
+    "pm2:restart": "pm2 restart all",
+    "pm2:logs": "pm2 logs",
+    "pm2:monit": "pm2 monit"
   },
   "browserslist": [
     "last 1 Chrome versions"
@@ -50,6 +56,7 @@
     "@types/react-dom": "19.1.3",
     "@vitejs/plugin-react": "4.4.1",
     "jest": "^29.7.0",
+    "pm2": "^5.3.0",
     "postcss": "8.5.3",
     "postcss-preset-mantine": "1.17.0",
     "react": "19.1.0",
