--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -21,17 +21,12 @@
   "scripts": {
     "build": "npm run clean && tsc && vite build",
     "clean": "rimraf dist",
-    "dev": "vite --port 3000",
+    "dev": "vite --port 3010",
     "lint": "eslint .",
     "preview": "vite preview",
+    "start": "vite --port 3010",
     "source-map-explorer": "source-map-explorer dist/**/*.js --gzip",
-    "test": "jest",
-    "pm2:dev": "pm2 start ecosystem.config.cjs --env development",
-    "pm2:prod": "pm2 start ecosystem.config.cjs --env production",
-    "pm2:stop": "pm2 stop all",
-    "pm2:restart": "pm2 restart all",
-    "pm2:logs": "pm2 logs",
-    "pm2:monit": "pm2 monit"
+    "test": "jest"
   },
   "browserslist": [
     "last 1 Chrome versions"
@@ -56,7 +51,6 @@
     "@types/react-dom": "19.1.3",
     "@vitejs/plugin-react": "4.4.1",
     "jest": "^29.7.0",
-    "pm2": "^5.3.0",
     "postcss": "8.5.3",
     "postcss-preset-mantine": "1.17.0",
     "react": "19.1.0",
