Enhance Docker setup by adding build arguments for production mode in docker-compose.yml and updating Dockerfile to support multi-stage builds with conditional commands for production and development environments.
Signed-off-by: whoisladleo <rwelamila.jr@gmail.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -58,6 +58,8 @@ services:
     build:
       context: ./packages/app
       dockerfile: Dockerfile
+      args:
+        - BUILD_MODE=production
     restart: always
     container_name: medplum-app
     depends_on:
